[package]
name = "netmongo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.34", features = ["serde"] }
clap = { version = "4.5.1", features = ["env","derive"] }
ipgeolocate = "0.3.6"
log = { version = "0.4.20", features = ["serde"] }
mongodb = { version = "2.8.1", features = ["tracing"] }
reqwest = { version = "0.11.24", features = ["serde_json", "cookies","json"] }
serde = { version = "1.0.196", features = ["derive", "alloc"] }
serde_json = { version = "1.0.113", features = ["alloc", "preserve_order"] }
tokio = { version = "1.36.0", features = ["full", "tracing"] }
